<resources>
    <string name="APPSFLYER_DEV_KEY">nWaFHGLShb7X5vfZQuKco</string>
    <string name="APPSFLYER_IOS_APP_ID">6758680392</string>
    <string name="ATLAS_URL">https://atlas.wealthsimple.com</string>
    <string name="BRAZE_API_KEY_ANDROID">b4f121b5-b89a-4d16-b7a5-ac941e8fd39a</string>
    <string name="BRAZE_API_KEY_IOS">9884f874-616e-40b1-b30c-2a283dd0ae0c</string>
    <string name="BRAZE_CUSTOM_ENDPOINT_ANDROID">b.webresource.ca</string>
    <string name="BRAZE_CUSTOM_ENDPOINT_IOS">sdk.iad-05.braze.com</string>
    <string name="BRAZE_DEEPLINK_DOMAINS">clicks.cdn.wealthsimple.com,clicks.wealthsimple.com,spgo.io</string>
    <string name="BUILD_FLAVOUR">release</string>
    <string name="CDN_BASE_URL">https://assets.wealthsimple.com</string>
    <string name="CONTENTFUL_CDA_KEY">GvYHi975yOziaFxl561PPsM-ZEyzHFgyUNgnGtBjSm4</string>
    <string name="CONTENTFUL_ENV">master</string>
    <string name="CONTENTFUL_SPACE_ID">tv0sm3akzr1o</string>
    <string name="E2E_BUILD">false</string>
    <string name="GOOGLE_MAPS_SDK_API_KEY_ANDROID">AIzaSyAiSn5X6TCcB4-5KT_POsCzGE9dCUO9DRY</string>
    <string name="GOOGLE_MAPS_SDK_API_KEY_IOS">AIzaSyDvgA16H_ld97n1SZm5uILQpa0ecZIHh5E</string>
    <string name="GRAPHQL_API_URL">https://my.wealthsimple.com/graphql</string>
    <string name="GRAPHQL_WS_API_URL">wss://realtime-api.wealthsimple.com/subscription</string>
    <string name="I2C_APP_ID">wtgSDK</string>
    <string name="I2C_APP_KEY">LS0tLS1CRUdJTiBQVUJMSUMgS0VZLS0tLS0KTUNRd0RRWUpLb1pJaHZjTkFRRUJCUUFERXdBd0VBSUpBTXhlS3FEYTVDNkpBZ01CQUFFPQotLS0tLUVORCBQVUJMSUMgS0VZLS0tLS0K</string>
    <string name="JITSU_CDN_URL">https://cmll1036100063b71yjehdoy6.d.jitsu.com/v1/projects</string>
    <string name="JITSU_URL">https://cmll1036100063b71yjehdoy6.d.jitsu.com/v1/batch</string>
    <string name="JITSU_WRITE_KEY">rtamiAkwNcut2b0ybwLwNRAnxNq8Ds6M:BGka5oG8LhjDc17RMqwLBef7UU7A0Al8</string>
    <string name="NIGHTLY_BUILD">false</string>
    <string name="OBSERVABILITY_MIXPANEL">3d5326270e6d1ab4e41803ccd6f252cf</string>
    <string name="PLAID_ENVIRONMENT">production</string>
    <string name="PLAID_PUBLIC_KEY">e1b827f0e869415932c8384d05451a</string>
    <string name="PRECIOUS_METAL_ROYAL_CANADIAN_MINT_ONE_OZ_ID">sec-p-ef44a7b9bf154ceaab9f25bc5ea2b285</string>
    <string name="PRECIOUS_METAL_ROYAL_CANADIAN_MINT_TENTH_OZ_ID">sec-p-21f072c8ed7042598bf91eaf81c6950a</string>
    <string name="PRECIOUS_METAL_WEALTHSIMPLE_ONE_OZ_ID">sec-p-4d82c38d17c14eeb88a8da9c142c069a</string>
    <string name="PRECIOUS_METAL_WEALTHSIMPLE_TENTH_OZ_ID">sec-p-ca780407cc4d4504a63731e1a122d942</string>
    <string name="PUBLIC_API_APP_OAUTH_UID">4da53ac2b03225bed1550eba8e4611e086c7b905a3855e6ed12ea08c246758fa</string>
    <string name="PUBLIC_API_BASE_URL">https://api.production.wealthsimple.com</string>
    <string name="PUBLIC_API_ENV">production</string>
    <string name="PUBLIC_API_OAUTH_UID_ANDROID">yoQ2Qh_EnyGjruGaO4HuGFDUpIbu1WDMqEBmjH_z9dA</string>
    <string name="PUBLIC_API_OAUTH_UID_IOS">0cM2HV7BwUAflBhVr2D5I8ILYH5lBZHTs0JqD0bIX2E</string>
    <string name="PUBLIC_GRAPHQL_API_URL">https://my.wealthsimple.com/public/graphql</string>
    <string name="PUBLISH_CDN_ASSETS">true</string>
    <string name="PUSH_NOTIFS_FCM_SENDER_ID">596352163686</string>
    <string name="SECURITY_GROUP_BIOTECH_ID">security-group-c912e7bc05e9</string>
    <string name="SECURITY_GROUP_CANNABIS_ID">security-group-8302fb50715f</string>
    <string name="SECURITY_GROUP_CRYPTO_ID">security-group-007sJrhRNI6r</string>
    <string name="SECURITY_GROUP_ETFS_ID">security-group-c6153b067083</string>
    <string name="SECURITY_GROUP_EXTENDED_HOURS_ID">security-group-008DbtRZPCSC</string>
    <string name="SECURITY_GROUP_FRACTIONAL_TRADING_ID">security-group-007r4MsVyhAW</string>
    <string name="SECURITY_GROUP_LOGISTICS_ID">security-group-e03ca4cb0513</string>
    <string name="SECURITY_GROUP_OPTIONS_ID">security-group-00843s3ueEXr</string>
    <string name="SECURITY_GROUP_TECHNOLOGY_ID">security-group-f68970b1232b</string>
    <string name="SENTRY_DSN">https://f60e9414cd71c8cf224f95f8fdd90ecd@o1057616.ingest.us.sentry.io/4510862960754688</string>
    <string name="STATSIG_CLIENT_KEY">client-HTNcZovB8xit9vmJmQ12z55bbEiKwijDKLqYav7B3wT</string>
    <string name="TARGET_ENVIRONMENT_NAME">production</string>
    <string name="WST_API_BASE_URL">https://wst-api.wealthsimple.com/api</string>
    <string name="a3ds2_content_description_info_text_indicator">Info text indicator icon</string>
    <string name="a3ds2_content_description_issuer_logo">Bank logo</string>
    <string name="a3ds2_content_description_scheme_logo">Credit card logo</string>
    <string name="a3ds2_content_description_state_indicator_icon">Expand or collapse expandable info text state indicator icon</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_failed">There was an error while processing your payment. Please try again later.</string>
    <string name="alert_description">Alert</string>
    <string name="android.credentials.TYPE_PASSWORD_CREDENTIAL">Password</string>
    <string name="androidx.credentials.TYPE_PUBLIC_KEY_CREDENTIAL">Passkey</string>
    <string name="androidx_compose_foundation_autofill">Autofill</string>
    <string name="androidx_compose_ui_autofill">Autofill</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Predict</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="asset_statements">" [{ include: https://staging.wealthsimple.com/.well-known/assetlinks.json }, { include: https://my.wealthsimple.com/.well-known/assetlinks.json }] "</string>
    <string name="bacs_account_number_hint">Bank account number</string>
    <string name="bacs_account_number_invalid">Invalid bank account number</string>
    <string name="bacs_confirm_and_pay">Confirm and pay</string>
    <string name="bacs_consent_account">I confirm the account is in my name and I am the only signatory required to authorise the Direct Debit on this account.</string>
    <string name="bacs_consent_amount">I agree that the above amount will be deducted from my bank account.</string>
    <string name="bacs_consent_amount_specified">I agree that %s will be deducted from my bank account.</string>
    <string name="bacs_consent_invalid">This field requires your action</string>
    <string name="bacs_continue">Continue</string>
    <string name="bacs_holder_name_hint">Bank account holder name</string>
    <string name="bacs_holder_name_invalid">Invalid bank account holder name</string>
    <string name="bacs_shopper_email_hint">Email address</string>
    <string name="bacs_shopper_email_invalid">Invalid email address</string>
    <string name="bacs_sort_code_hint">Sort code</string>
    <string name="bacs_sort_code_invalid">Invalid sort code</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="muppet_atomic_webview_back">Back</string>
    <string name="muppet_atomic_webview_close">Close</string>
    <string name="muppet_atomic_webview_reload">Reload</string>
    <string name="pi2_modal_primary_action">Cancel</string>
    <string name="pi2_modal_secondary_action">Resume</string>
    <string name="pi2_modal_subtitle">If you cancel, your progress may be lost.</string>
    <string name="pi2_modal_title">Cancel?</string>
    <string name="plaid_error_internal_error_exit">Exit</string>
    <string name="plaid_error_internal_server_error_something_went_wrong">Something went wrong</string>
    <string name="plaid_error_internal_server_error_try_again_later">You can try again later or find another bank to continue.</string>
    <string name="plaid_exit">Exit</string>
    <string name="veryfi_lens_add_extra_data_scanner">Add Extra Data</string>
    <string name="veryfi_lens_btn_retry_upload">Retry</string>
    <string name="veryfi_lens_crop">Crop</string>
    <string name="veryfi_lens_crop_confirm_fragment_screenshot_detected_text">Whoops, screenshot detected.</string>
    <string name="veryfi_lens_crop_confirm_fragment_screenshot_detected_text_subtitle">Image seems to be a screenshot, please send a valid document.</string>
    <string name="veryfi_lens_crop_confirm_fragment_screenshot_detected_try_again">Try again</string>
    <string name="veryfi_lens_crop_tip_body">Use your Finger to draw the area on the screen you want to crop. Once you lift your finger up the area will crop and confirm your change with an option to undo. Give it a try.</string>
    <string name="veryfi_lens_crop_tip_button_ok">OK</string>
    <string name="veryfi_lens_crop_tip_title">Tip</string>
    <string name="veryfi_lens_delete">Delete</string>
    <string name="veryfi_lens_gallery_check_size_body">Your image appears to be of low quality and will most likely result in poor data extraction. For best results use an image that is at least 200x300 pixels.</string>
    <string name="veryfi_lens_gallery_check_size_no">Try again</string>
    <string name="veryfi_lens_gallery_check_size_title">Whoops. Low Quality Image Detected.</string>
    <string name="veryfi_lens_gallery_check_size_yes">Go ahead anyway</string>
    <string name="veryfi_lens_geometric_correction">Image Correction Option</string>
    <string name="veryfi_lens_hint_external_id">Enter your external id here</string>
    <string name="veryfi_lens_hint_notes_scanner">Enter your notes here</string>
    <string name="veryfi_lens_manual_stitching_counter_text">1/2</string>
    <string name="veryfi_lens_rotate">Rotate</string>
    <string name="veryfi_lens_sending_email">Send email…</string>
    <string name="veryfi_lens_stitch">Stitch</string>
    <string name="veryfi_lens_stitching_add_more">Add more</string>
    <string name="veryfi_lens_undo">Undo</string>
    <string name="veryfi_lens_whatsapp_back_to_whatsapp">Back to Whatsapp</string>
    <string name="veryfi_lens_whatsapp_loading">Loading...</string>
</resources>