<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/bottom_sheet_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:importantForAccessibility="yes" android:paddingHorizontal="@dimen/startEndMargin" android:paddingVertical="16.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:id="@id/hintTitle" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="16.0dip" android:text="@string/pi2_modal_title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintWidth_max="500.0dip" style="?textAppearanceHeadline6" />
    <TextView android:id="@id/hintMessage" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/pi2_modal_subtitle" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/hintTitle" app:layout_constraintWidth_max="500.0dip" style="?textAppearanceSubtitle1" />
    <com.withpersona.sdk2.inquiry.shared.ui.PersonaMaterialButton android:id="@id/close_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/pi2_modal_primary_action" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/hintMessage" style="@style/Persona.Inquiry2.Button" />
    <com.withpersona.sdk2.inquiry.shared.ui.PersonaMaterialButton android:id="@id/retry_button" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/pi2_modal_secondary_action" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/close_button" style="@style/Persona.Inquiry2.OutlinedButton" />
</androidx.constraintlayout.widget.ConstraintLayout>
