<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@id/main" android:fitsSystemWindows="false" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.veryfi.lens.customviews.lottie.LottieAnimationView android:id="@id/animation" android:layout_width="fill_parent" android:layout_height="450.0dip" android:paddingStart="@dimen/veryfi_lens_content_inset_xlarge" android:paddingEnd="@dimen/veryfi_lens_content_inset_xlarge" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.25" app:lottie_autoPlay="true" app:lottie_loop="true" app:lottie_rawRes="@raw/upload_animation" />
        <TextView android:textSize="28.0sp" android:textStyle="bold" android:gravity="center_horizontal" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="16.0dip" android:text="@string/veryfi_lens_whatsapp_loading" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/animation" />
        <TextView android:textSize="24.0sp" android:gravity="center_horizontal" android:id="@id/message" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title" />
        <Button android:id="@id/retryButton" android:visibility="gone" android:layout_width="250.0dip" android:layout_height="wrap_content" android:layout_margin="20.0dip" android:text="@string/veryfi_lens_btn_retry_upload" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/message" />
        <Button android:id="@id/backToWhatsAppButton" android:visibility="gone" android:layout_width="250.0dip" android:layout_height="wrap_content" android:layout_margin="20.0dip" android:text="@string/veryfi_lens_whatsapp_back_to_whatsapp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/retryButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
