<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.MaterialToolbar android:id="@id/muppet_atomic_webview_toolbar" android:background="?colorSurface" android:layout_width="fill_parent" android:layout_height="?actionBarSize" app:contentInsetStart="0.0dip" app:contentInsetStartWithNavigation="0.0dip">
        <ImageButton android:layout_gravity="start|center" android:id="@id/muppet_atomic_webview_close" android:background="@drawable/muppet_url_pill_bg" android:padding="8.0dip" android:layout_width="40.0dip" android:layout_height="40.0dip" android:src="@drawable/muppet_ic_check_24" android:scaleType="centerInside" android:contentDescription="@string/muppet_atomic_webview_close" android:layout_marginStart="8.0dip" />
        <TextView android:textSize="14.0sp" android:textColor="?colorOnSurface" android:ellipsize="end" android:gravity="center_vertical" android:layout_gravity="center" android:id="@id/muppet_atomic_webview_host" android:background="@drawable/muppet_url_pill_bg" android:paddingTop="6.0dip" android:paddingBottom="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="240.0dip" android:maxLines="1" android:drawablePadding="6.0dip" android:paddingStart="14.0dip" android:paddingEnd="16.0dip" />
        <ImageButton android:layout_gravity="end|center" android:id="@id/muppet_atomic_webview_reload" android:background="@drawable/muppet_url_pill_bg" android:padding="8.0dip" android:layout_width="40.0dip" android:layout_height="40.0dip" android:src="@drawable/muppet_ic_refresh_24" android:scaleType="centerInside" android:contentDescription="@string/muppet_atomic_webview_reload" android:layout_marginEnd="8.0dip" />
    </com.google.android.material.appbar.MaterialToolbar>
    <ProgressBar android:id="@id/muppet_atomic_webview_progress" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="3.0dip" android:max="100" style="?android:progressBarStyleHorizontal" />
    <FrameLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <FrameLayout android:id="@id/muppet_atomic_webview_content" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <ImageButton android:layout_gravity="start|bottom" android:id="@id/muppet_atomic_webview_back" android:padding="8.0dip" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginBottom="12.0dip" android:src="@drawable/muppet_ic_arrow_back_24" android:scaleType="centerInside" android:contentDescription="@string/muppet_atomic_webview_back" android:layout_marginStart="12.0dip" android:elevation="4.0dip" />
    </FrameLayout>
</merge>
